Code update including Rx (advanced mode)

--- a/src/coms/coms_ui/templates/log_in.html
+++ b/src/coms/coms_ui/templates/log_in.html
@@ -109,22 +109,20 @@
           <div class="col">
             <!--Standard About on mouse-over-->
             <div id="standard-about" class="jumbotron about-container">
-              <p>Standard MR console funcitonalities:</p>
+              <p>Standard user features:</p>
               <ul>
-                <li>Subject registration</li>
-                <li>Basic sequence acquisition</li>
-                <li>Quantitative analysis</li>
+                <li>T1/T2 mapping (ISMRM/NIST phantom)</li>
+
               </ul>
               <br>
             </div>
             <!--Advanced mode About on mouse-over-->
             <div id="advanced-about" class="jumbotron about-container">
-              <p>In-depth understanding of MR blocks:</p>
+              <p>Advanced user features:</p>
               <ul>
-                <li>Pulse sequence implementation</li>
-                <li>Phantom/Subject models</li>
-                <li>Transmission and reception</li>
-                <li>Recontruction and analysis</li>
+                <li>Sequence and phantom SAR modelling</li>
+                <li>MR Rx chain simulations</li>
+
               </ul>
             </div>
           </div>
