--- a/src/coms/coms_ui/static/main_style.css
+++ b/src/coms/coms_ui/static/main_style.css
@@ -75,6 +75,10 @@ h4{
   background:#b1c3f2;
   color:black;
 }
+.nav-tabs .nav-link.disabled{
+  background:#bfbfbf;
+  color:white;
+}
 .nav-item a:hover { color: white !important; }
 /*BUTTONS #002F73*/
 .btn{
