--- a/src/coms/coms_ui/templates/register.html
+++ b/src/coms/coms_ui/templates/register.html
@@ -288,7 +288,7 @@
                     </div>
                       <div class="row">
                         <div class="col" id="submitButton" >
-                          <input id="reg-form-submit" type="submit" class="btn btn-primary submit-form-btn" value="Register Subject" >
+                          <input id="reg-form-submit" type="submit" class="btn btn-primary" value="Register Subject" >
 
 
                         </div>
