--- a/src/coms/coms_ui/templates/analyze.html
+++ b/src/coms/coms_ui/templates/analyze.html
@@ -35,7 +35,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
     <link href= "http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" media="all" />
     <script type="text/javascript" src="{{url_for('static',filename='analyze_func.js')}}"></script>
-
+    <script src="../static/log_out_func.js"> </script>
 
 
     <!--CSS-->
@@ -132,7 +132,7 @@
     <div id="enclosingjumbo" class="jumbotron">
 
       <h1>Virtual MR Scanner - Standard Mode</h1>
-
+      <input id="log-out" class="btn btn-primary" type="button" name="" value="Log-out" style="float:right">
       <!--Images display panel-->
       <div class="images-container">
         <!--Original data-->
