--- a/src/coms/coms_ui/templates/Rx.html
+++ b/src/coms/coms_ui/templates/Rx.html
@@ -28,10 +28,12 @@
     <!-- External JS files-->
 
     <script src="../static/rx_func.js"> </script>
+    <script src="../static/log_out_func.js"> </script>
 
     <!--CSS-->
     <link rel="stylesheet" href="../static/main_style.css">
     <link rel="stylesheet" href="../static/advanced_mode_style.css">
+    <link rel="stylesheet" href="../static/rx_style.css">
 
     <script type="text/javascript">
       if ('{{ success }}') {
@@ -41,16 +43,19 @@
           var payload_dict = {{ payload }}
 
           $(document).ready(function(){
-            console.log(payload_dict)
+
             $('#signal-container').html('<img src='+payload_dict['signals_path']+'>')
-            $('#recon-img-container').html('<img src='+payload_dict['recon_path']+'>')
+            $(".im-title").show();
+            $('#recon-img-container').append('<img src='+payload_dict['recon_path']+'>')
             autoFillForm(payload_dict);
 
           });
 
         {% endautoescape %}
       }
-
+      $(document).ready(function(){
+        $("#rx-im").addClass("highlighted");
+      });
     </script>
 
 
@@ -61,7 +66,8 @@
         <img src="./static/advanced/gradients.png" >
       </div>
       <div id="txrx-container">
-        <img src="./static/advanced/TxRx.png" >
+        <img id="tx-im" src="./static/advanced/Tx.png" >
+        <img  id="rx-im" src="./static/advanced/Rx.png" >
       </div>
 
       <div id="human-form-container">
@@ -69,7 +75,7 @@
 
       </div>
       <div id="computer-container">
-        <img src="./static/advanced/computer.png" >
+        <img id="computer-im" src="./static/advanced/computer.png" >
 
       </div>
       <div id="run-exam-button">
@@ -79,6 +85,7 @@
     </div>
     <div id="enclosingjumbo" class="jumbotron">
       <h1>Virtual MR Scanner - Advanced Mode</h1>
+      <input id="log-out" class="btn btn-primary" type="button" name="" value="Log-out" style="float:right">
       <div id="images-panel" class="jumbotron">
         <div id="signal-container"  class="container rx-container">
 
@@ -88,15 +95,13 @@
 
         <div id="vl1" class="vertical-line"></div>
 
-        <div id="recon-img-container"  class="container rx-container">
-
-
-
+        <div id="recon-img-container"  class="container rx-container"><div class="im-title">Resulting Image</div>
         </div>
 
         <div id="vl2" class="vertical-line"></div>
 
         <div id="original-img-container"  class="container rx-container">
+          <div class="im-title-static">Original Image</div>
           <img id="axial" src="../static/Rx/inputs/axial.png" >
           <img id="coronal" src="../static/Rx/inputs/coronal.png" >
           <img id="sagittal" src="../static/Rx/inputs/sagittal.png" >
@@ -112,7 +117,7 @@
               <a class="nav-link disabled" href="..." >PSD Inspector</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="...">Tx</a>
+              <a class="nav-link " href="{{ url_for('on_tx')}}">Tx</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="...">Subject</a>
@@ -163,7 +168,7 @@
             </div>
           </div>
         </form>
-
+      </div>
 
 
     </div>
