--- a/src/coms/coms_ui/static/tx_style.css
+++ b/src/coms/coms_ui/static/tx_style.css
@@ -26,13 +26,14 @@
   display: none;
 }
 table{
-  height: 100%;
-  margin-left: 15vh;
-  margin-top: 6vh;
+  width: 95%;
+  height: 95%;
+
+  margin-top: 2vh;
 }
 table, th, td {
   text-align: center;
-  border: 1px solid black;
+  border: 3px solid #5a71a8;
 }
 th, td {
   padding: 15px;
