--- a/src/coms/coms_ui/static/acquire_style.css
+++ b/src/coms/coms_ui/static/acquire_style.css
@@ -30,7 +30,8 @@ h4 bold{
   text-align: center;
 }
 .acquire-container img{
-  width: 100%;
+  width: 90%;
+
 }
 .vertical-line {
   border-left: 2px solid white;
@@ -137,4 +138,21 @@ ul#seq-history-list{
 }
 .IRSE-checkbox{
   display: none;
+}
+#axial-carousel{
+  display: none;
+}
+#sagittal-carousel{
+  display: none;
+}
+#coronal-carousel{
+  display: none;
+}
+.im-title{
+  color: white;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  font-size: 1.5rem;
+
 }
