Google Forms for Feedback into VS

--- a/src/coms/coms_ui/static/main_style.css
+++ b/src/coms/coms_ui/static/main_style.css
@@ -96,7 +96,15 @@ h4{
   margin-right: 10px;
   border-radius: 10px;
 }
-
+.feedback-btn{
+  position: absolute;
+  left:auto;
+  bottom: 2%;
+  font-weight: bold;
+  font-size: 150%;
+  padding-top: 0;
+  padding-bottom: 0;
+}
 /*INPUTS*/
 input{
   padding-left: 3px;
