--- a/src/coms/coms_ui/templates/acquire.html
+++ b/src/coms/coms_ui/templates/acquire.html
@@ -524,7 +524,7 @@
 
 
           </form>
-
+          <input type="button" class="btn btn-primary feedback-btn" value="?">
         </div> <!--Main Panel-->
 
       </div> <!--Panel container-->
