--- a/src/coms/coms_ui/templates/register.html
+++ b/src/coms/coms_ui/templates/register.html
@@ -305,7 +305,7 @@
                 <input type="hidden" id="formId2" name="formName" value="new-reg">
                 <input id="new-subject" type="submit" class="btn btn-primary" value="New Subject" >
               </form>
-
+              <input type="button" class="btn btn-primary feedback-btn" value="?">
             </div>
 
 
